# marreta-lang

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  proposal.yml
.github/release-notes/: extension.md  runtime.md
.github/scripts/: release_smoke.sh
.github/workflows/: build.yml  e2e.yml  install.yml  release-smoke.yml  release-vscode.yml  release.yml
docs/: STYLE.md
docs/agents/: AGENTS.md  llms-full.txt  llms.txt
docs/benchmarks/: README.md
docs/guide/: SUMMARY.md
docs/performance/: BASELINE_040.md  LOAD_TEST_DB_20260330_2112.md  LOAD_TEST_DOC_20260401_1212.md  LOAD_TEST_POOL_CONFIG_20260331_0030.md  LOAD_TEST_POST_046_20260519.md  LOAD_TEST_TRACE_022B_20260417.md
docs/spec/: 001_CORE.md  002_HTTP.md  002a_HTTP_021.md  003_SCHEMA_031.md  004_MULTIFILE_032.md  005_RESPONSE_SCHEMA_033.md  006_ADVANCED_SCHEMAS_040.md  007_ERROR_HANDLING.md  008_LANGUAGE_ERGONOMICS.md  009_DB_RELATIONAL.md  009a_DB_POOL_CONFIG.md  010_DOC_MODULE.md  011_LOAD_TESTING.md  012_DX_010.md  013_QUEUE.md  014_CACHE.md  015_HTTP_CLIENT.md  016_ITERATION.md  017_FILE_ENCAPSULATION.md  018_DB_MIGRATIONS.md  018b_MIGRATION_HYGIENE.md  019_PROJECT_ENTRYPOINT.md  019b_PROJECT_METADATA_UNIFICATION.md  020_SECRET_AWARE_CONFIG.md  021_DOCTOR_COMMAND.md  022_RUNTIME_ERROR_HARDENING.md  022b_TRACE_PERF_AND_ERGONOMICS.md  023_TESTING_DSL.md  023b_API_SCENARIO_TESTING_HARDENING.md  024_AUTHENTICATION_AUTHORIZATION.md  025_PERSISTENCE_BY_CONVENTION_AND_QUERY_NAVIGATION.md  026_IF_ELSE_BLOCKS.md  027_DATETIME_CLOCK.md  028_MATH_NAMESPACE.md  029_FILESYSTEM_NAMESPACE.md  030_JSON_NAMESPACE.md  031_BASE64_NAMESPACE.md  032_LOG_NAMESPACE.md  033_REQUEST_LOGGING.md  034_UUID_NAMESPACE.md  (+47 more)
e2e/: README.md  app.marreta  marreta.env  run.sh
e2e/routes/: auth.marreta  contracts.marreta  control_flow.marreta  error_handling.marreta  expressions.marreta  tasks.marreta  (+9 more)
src/: agents.rs  ast.rs  auth.rs  cli_ux.rs  config.rs  coverage.rs  doctor.rs  environment.rs  error.rs  feature_flags.rs  file_loader.rs  formatter.rs  init.rs  interpreter.rs  lexer.rs  lib.rs  lint.rs  main.rs  migrations.rs  openapi.rs  parser.rs  persistent_schema.rs  response_serializer.rs  route_loader.rs  runtime_profile.rs  scenario_tests.rs  schema_cycle.rs  server.rs  token.rs  trace_context.rs  validator.rs  value.rs  version.rs
tests/: agents_gate.rs  http_integration_tests.rs  integration_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: AGENTS.md.tmpl
(+357 files in other folders)
