[package]
name = "marreta"
version = "0.2.0"
# Distributed as prebuilt binaries via GitHub Releases; never published to crates.io.
publish = false
edition = "2024"
rust-version = "1.85"
description = "A focused, zero-ceremony DSL for building REST APIs, with HTTP, database, cache, and messaging as first-class language citizens"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tm-dev-lab/marreta-lang"
homepage = "https://marreta.dev"
documentation = "https://marreta.dev/docs"
authors = ["Thiago Mendes <mail.thiagomendes@gmail.com>"]
keywords = ["dsl", "rest", "api", "web", "interpreter"]
categories = ["web-programming::http-server", "development-tools"]
exclude = ["/docs", "/e2e", "/.github"]

# Lints that are inherent to this codebase's shape rather than defects:
# - HTTP handlers and the route registrar inject many runtime dependencies;
# - the interpreter's signatures carry genuinely rich types;
# - some fallible paths return a response-bearing error by design.
# Allowed deliberately and centrally so the rest of clippy stays enforced.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
result_large_err = "allow"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
serde = "1.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
base64 = "0.22.1"
indexmap = "2.12.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
dotenvy = "0.15.7"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "rust_decimal", "chrono"] }
mongodb = "3.5.2"
rust_decimal = "1.41"
chrono = "0.4.44"
chrono-tz = "0.10.4"
async-trait = "0.1.89"
futures-util = "0.3.32"
lapin = "4"
tokio-stream = "0.1"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10.9"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
subtle = "2.6.1"
uuid = { version = "1.23.0", features = ["v4", "v7", "fast-rng"] }
getrandom = "0.4.2"

[dev-dependencies]
pretty_assertions = "1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tempfile = "3"
